global: add avatar support and black formatting

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,9 @@ invenio_base.api_apps =
 invenio_base.api_blueprints =
     invenio_users = invenio_users_resources.views:create_users_resources_bp
     invenio_groups = invenio_users_resources.views:create_groups_resources_bp
+    invenio_users_resources = invenio_users_resources.views:create_blueprint
+invenio_base.blueprints =
+    invenio_users_resources = invenio_users_resources.views:create_blueprint
 invenio_search.mappings =
     users = invenio_users_resources.records.mappings
     groups = invenio_users_resources.records.mappings
@@ -66,7 +69,20 @@ universal = 1
 add_ignore = D401
 
 [pycodestyle]
+ignore = E203,W503
+max-line-length = 88
 exclude = docs/conf.py
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+line_length = 88
+
+[flake8]
+max-line-length = 88
 
 [compile_catalog]
 directory = invenio_users_resources/translations/
