--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,25 +7,25 @@
 # modify it under the terms of the MIT License; see LICENSE file for more
 # details.
 
-
 include .dockerignore
 include .editorconfig
 include .tx/config
-prune docs/_build
-recursive-include .github/workflows *.yml
-recursive-include invenio_users_resources/translations *.po *.pot *.mo
-
-# added by check-manifest
 include *.rst
 include *.sh
 include *.txt
-include LICENSE
 include babel.ini
+include LICENSE
 include pytest.ini
+invenio_users_resources/templates/avatar.svg
+prune docs/_build
+recursive-include .github/workflows *.yml
 recursive-include docs *.bat
 recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs *.txt
 recursive-include docs Makefile
 recursive-include invenio_users_resources *.json
+recursive-include invenio_users_resources *.svg
+recursive-include invenio_users_resources/translations *.po *.pot *.mo
 recursive-include tests *.py
+recursive-include tests *.svg
