--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@
 [metadata]
 name = invenio-users-resources
 version = attr: invenio_users_resources.__version__
-description = "Invenio module providing management APIs for users and roles/groups."
+description = Invenio module providing management APIs for users and roles/groups.
 long_description = file: README.rst, CHANGES.rst
 keywords = invenio users roles groups management
 license = MIT
@@ -33,9 +33,9 @@ install_requires =
 
 [options.extras_require]
 tests =
-    invenio-app>=1.3.2
-    invenio-db[postgresql,mysql,versioning]>=1.0.13,<2.0
-    pytest-invenio>=1.4.4
+    invenio-app>=1.3.3
+    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
+    pytest-invenio>=1.4.6
     sphinx>=4.2.0,<5
 elasticsearch7 =
     invenio-search[elasticsearch7]>=1.4.2,<2.0
