--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -20,3 +20,17 @@ include .tx/config
 prune docs/_build
 recursive-include .github/workflows *.yml
 recursive-include invenio_users_resources/translations *.po *.pot *.mo
+
+# added by check-manifest
+include *.rst
+include *.sh
+include *.txt
+include babel.ini
+include pytest.ini
+recursive-include docs *.bat
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs *.txt
+recursive-include docs Makefile
+recursive-include invenio_users_resources *.json
+recursive-include tests *.py
