--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,18 +1,12 @@
 # -*- coding: utf-8 -*-
 #
 # Copyright (C) 2022 CERN.
+# Copyright (C) 2022 Graz University of Technology.
 #
 # Invenio-Users-Resources is free software; you can redistribute it and/or
 # modify it under the terms of the MIT License; see LICENSE file for more
 # details.
 
-# TODO: Generate this manifest file by running the following commands:
-# (please sort the lines in this file after running below commands)
-#
-#  git init
-#  git add -A
-#  pip install -e .[all]
-#  check-manifest -u
 
 include .dockerignore
 include .editorconfig
@@ -20,3 +14,18 @@ include .tx/config
 prune docs/_build
 recursive-include .github/workflows *.yml
 recursive-include invenio_users_resources/translations *.po *.pot *.mo
+
+# added by check-manifest
+include *.rst
+include *.sh
+include *.txt
+include LICENSE
+include babel.ini
+include pytest.ini
+recursive-include docs *.bat
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs *.txt
+recursive-include docs Makefile
+recursive-include invenio_users_resources *.json
+recursive-include tests *.py
