--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ exclude = docs/conf.py
 
 [compile_catalog]
 directory = invenio_users_resources/translations/
+use-fuzzy = True
 
 [extract_messages]
 copyright_holder = CERN
