global: add user resolver
* moves the user resolver from invenio-records-resources
* register the user service in the global registry

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,13 +28,13 @@ zip_safe = False
 install_requires =
     # OAuthClient brings in Invenio-Accounts and Invenio-I18N
     invenio-oauthclient>=2.0.0.dev0
-    invenio-records-resources>=0.19.10,<0.20
+    invenio-records-resources>=0.19.12,<0.20
 
 [options.extras_require]
 tests =
     invenio-app>=1.3.3
     invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
-    pytest-invenio>=1.4.8
+    pytest-invenio>=1.4.10
     sphinx>=4.2.0,<5
 elasticsearch7 =
     invenio-search[elasticsearch7]>=1.4.2,<2.0
@@ -47,9 +47,9 @@ invenio_base.api_apps =
 invenio_base.api_blueprints =
     invenio_users = invenio_users_resources.views:create_users_resources_bp
     invenio_groups = invenio_users_resources.views:create_groups_resources_bp
-    invenio_users_resources = invenio_users_resources.views:create_blueprint
+    invenio_users_resources = invenio_users_resources.views:blueprint
 invenio_base.blueprints =
-    invenio_users_resources = invenio_users_resources.views:create_blueprint
+    invenio_users_resources = invenio_users_resources.views:blueprint
 invenio_search.mappings =
     users = invenio_users_resources.records.mappings
     groups = invenio_users_resources.records.mappings
