--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ tests =
     invenio-app>=1.3.3
     invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
     pytest-invenio>=1.4.10
-    sphinx>=4.2.0,<5
+    sphinx>=4.5
 elasticsearch7 =
     invenio-search[elasticsearch7]>=1.4.2,<2.0
 
