move check_manifest configuration to setup.cfg.
concentrate the configuration of all calls in one place

--- a/setup.cfg
+++ b/setup.cfg
@@ -91,6 +91,10 @@ output-dir = invenio_users_resources/translations/
 [isort]
 profile=black
 
+[check-manifest]
+ignore =
+    *-requirements.txt
+
 [tool:pytest]
 addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_users_resources --cov-report=term-missing
 testpaths = docs tests invenio_users_resources
