--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -29,3 +29,4 @@ recursive-include invenio_users_resources *.svg
 recursive-include invenio_users_resources/translations *.po *.pot *.mo
 recursive-include tests *.py
 recursive-include tests *.svg
+include .git-blame-ignore-revs
