--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 # -*- coding: utf-8 -*-
 #
 # Copyright (C) 2022 CERN.
+# Copyright (C) 2022 Graz University of Technology.
 #
 # Invenio-Users-Resources is free software; you can redistribute it and/or
 # modify it under the terms of the MIT License; see LICENSE file for more
@@ -32,6 +33,7 @@ install_requires =
 
 [options.extras_require]
 tests =
+    pytest-black>=0.3.0,<0.3.10
     invenio-app>=1.3.3
     invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
     pytest-invenio>=1.4.10
@@ -67,22 +69,6 @@ universal = 1
 [pydocstyle]
 add_ignore = D401
 
-[pycodestyle]
-ignore = E203,W503
-max-line-length = 88
-exclude = docs/conf.py
-
-[isort]
-multi_line_output = 3
-include_trailing_comma = True
-force_grid_wrap = 0
-use_parentheses = True
-ensure_newline_before_comments = True
-line_length = 88
-
-[flake8]
-max-line-length = 88
-
 [compile_catalog]
 directory = invenio_users_resources/translations/
 use-fuzzy = True
@@ -101,3 +87,10 @@ output-dir = invenio_users_resources/translations/
 [update_catalog]
 input-file = invenio_users_resources/translations/messages.pot
 output-dir = invenio_users_resources/translations/
+
+[isort]
+profile=black
+
+[tool:pytest]
+addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_users_resources --cov-report=term-missing
+testpaths = docs tests invenio_users_resources
