--- a/setup.cfg
+++ b/setup.cfg
@@ -28,18 +28,20 @@ python_requires = >=3.7
 zip_safe = False
 install_requires =
     # OAuthClient brings in Invenio-Accounts and Invenio-I18N
-    invenio-oauthclient>=2.0.0.dev0
-    invenio-records-resources>=0.20.0,<0.21
+    invenio-oauthclient>=2.0.0,<3.0.0
+    invenio-records-resources>=0.21.0,<0.22.0
 
 [options.extras_require]
 tests =
-    pytest-black>=0.3.0,<0.3.10
-    invenio-app>=1.3.3
-    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
-    pytest-invenio>=1.4.10
+    pytest-black>=0.3.0
+    invenio-app>=1.3.3,<2.0.0
+    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0.0
+    pytest-invenio>=2.0.0,<3.0.0
     sphinx>=4.5
 elasticsearch7 =
-    invenio-search[elasticsearch7]>=1.4.2,<2.0
+    invenio-search[elasticsearch7]>=2.0.0,<3.0.0
+opensearch1 =
+    invenio-search[opensearch1]>=2.0.0,<3.0.0
 
 [options.entry_points]
 invenio_base.apps =
