global: upgrade invenio-records-resources

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ author_email = info@inveniosoftware.org
 platforms = any
 url = https://github.com/inveniosoftware/invenio-users-resources
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 5 - Production/Stable
 
 [options]
 include_package_data = True
@@ -29,7 +29,7 @@ zip_safe = False
 install_requires =
     # OAuthClient brings in Invenio-Accounts and Invenio-I18N
     invenio-oauthclient>=2.0.0,<3.0.0
-    invenio-records-resources>=0.21.4,<0.22.0
+    invenio-records-resources>=1.0.0,<2.0.0
 
 [options.extras_require]
 tests =
