setup: add explicit dependency on invenio-accounts

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,8 @@ packages = find:
 python_requires = >=3.7
 zip_safe = False
 install_requires =
-    # OAuthClient brings in Invenio-Accounts and Invenio-I18N
+    invenio-accounts>=2.2.0,<3.0.0
+    invenio-i18n>=2.0.0
     invenio-oauthclient>=2.2.0,<3.0.0
     invenio-records-resources>=4.0.0,<5.0.0
 
