--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ zip_safe = False
 install_requires =
     invenio-accounts>=2.2.0,<3.0.0
     invenio-i18n>=2.0.0
+    invenio-notifications>=0.1.0,<1.0.0
     invenio-oauthclient>=2.2.0,<3.0.0
     invenio-records-resources>=4.0.0,<5.0.0
 
