--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -26,6 +26,7 @@ recursive-include docs *.txt
 recursive-include docs Makefile
 recursive-include invenio_users_resources *.json
 recursive-include invenio_users_resources *.svg
+recursive-include invenio_users_resources *.html
 recursive-include invenio_users_resources/translations *.po *.pot *.mo
 recursive-include tests *.py
 recursive-include tests *.svg
