init: move record_once to finalize_app

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 #
 # Copyright (C) 2022-2024 CERN.
-# Copyright (C) 2022 Graz University of Technology.
+# Copyright (C) 2022-2024 Graz University of Technology.
 #
 # Invenio-Users-Resources is free software; you can redistribute it and/or
 # modify it under the terms of the MIT License; see LICENSE file for more
@@ -58,8 +58,12 @@ invenio_base.api_blueprints =
     invenio_groups = invenio_users_resources.views:create_groups_resources_bp
     invenio_domains = invenio_users_resources.views:create_domains_resources_bp
     invenio_users_resources = invenio_users_resources.views:blueprint
+invenio_base.api_finalize_app =
+    invenio_users_resources = invenio_users_resources.ext:api_finalize_app
 invenio_base.blueprints =
     invenio_users_resources = invenio_users_resources.views:blueprint
+invenio_base.finalize_app =
+    invenio_users_resources = invenio_users_resources.ext:finalize_app
 invenio_search.mappings =
     users = invenio_users_resources.records.mappings
     groups = invenio_users_resources.records.mappings
@@ -68,6 +72,7 @@ invenio_i18n.translations =
     messages = invenio_users_resources
 invenio_access.actions =
     user_management_action = invenio_users_resources.permissions:user_management_action
+
 
 [build_sphinx]
 source-dir = docs/
