--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ packages = find:
 python_requires = >=3.7
 zip_safe = False
 install_requires =
+    invenio-administration>=1.1.0,<2.0.0
     invenio-accounts>=2.2.0,<3.0.0
     invenio-i18n>=2.0.0
     invenio-notifications>=0.1.0,<1.0.0
@@ -63,7 +64,11 @@ invenio_search.mappings =
     groups = invenio_users_resources.records.mappings
 invenio_i18n.translations =
     messages = invenio_users_resources
-
+invenio_administration.views =
+    invenio_users_resources_users_list = invenio_users_resources.administration.views.users:UsersListView
+    invenio_users_resources_users_edit = invenio_users_resources.administration.views.users:UsersEditView
+    invenio_users_resources_users_create = invenio_users_resources.administration.views.users:UsersCreateView
+    invenio_users_resources_details = invenio_users_resources.administration.views.users:UsersDetailView
 [build_sphinx]
 source-dir = docs/
 build-dir = docs/_build
