users: added moderation actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,8 @@ invenio_search.mappings =
     groups = invenio_users_resources.records.mappings
 invenio_i18n.translations =
     messages = invenio_users_resources
+invenio_access.actions =
+    user_moderation_action = invenio_users_resources.permissions:user_moderation_action
 
 invenio_administration.views =
     invenio_users_resources_users_list = invenio_users_resources.administration.views.users:UsersListView
