permissions: added role based generator & resolver

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ invenio_search.mappings =
 invenio_i18n.translations =
     messages = invenio_users_resources
 invenio_access.actions =
-    user_moderation_action = invenio_users_resources.permissions:user_moderation_action
+    user_management_action = invenio_users_resources.permissions:user_management_action
 
 invenio_administration.views =
     invenio_users_resources_users_list = invenio_users_resources.administration.views.users:UsersListView
