--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,39 +33,19 @@ jobs:
         # a new item to the following lists.
         # You can see the complete list of services and versions that are available at:
         # https://docker-services-cli.readthedocs.io/en/latest/configuration.html
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9]
         requirements-level: [pypi]
         cache-service: [redis]
-        db-service: [postgresql13, postgresql14, mysql8]
+        db-service: [postgresql14]
         mq-service: [rabbitmq]
         search-service: [opensearch2, elasticsearch7]
-
-        exclude:
-          - python-version: 3.7
-            db-service: postgresql13
-
-          - python-version: 3.7
-            db-service: mysql8
-
-        include:
-          - db-service: postgresql14
-            DB_EXTRAS: "postgresql"
-
-          - db-service: postgresql13
-            DB_EXTRAS: "postgresql"
-
-          - search-service: opensearch2
-            SEARCH_EXTRAS: "opensearch2"
-
-          - search-service: elasticsearch7
-            SEARCH_EXTRAS: "elasticsearch7"
 
     env:
       CACHE: ${{ matrix.cache-service }}
       DB: ${{ matrix.db-service }}
       MQ: ${{ matrix.mq-service }}
       SEARCH: ${{ matrix.search-service }}
-      EXTRAS: tests,${{matrix.SEARCH_EXTRAS}}
+      EXTRAS: tests,${{matrix.search-service}}
 
     steps:
       - name: Checkout
