global: domains rest api and underlying service
Co-authored-by: Karolina Przerwa <karolina.m.przerwa@gmail.com>
Co-authored-by: Sam Arbid <36583694+Samk13@users.noreply.github.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,7 @@ jobs:
         cache-service: [redis]
         db-service: [postgresql14]
         mq-service: [rabbitmq]
-        search-service: [opensearch2, elasticsearch7]
+        search-service: [opensearch2]
 
     env:
       CACHE: ${{ matrix.cache-service }}
