--- a/setup.cfg
+++ b/setup.cfg
@@ -56,12 +56,14 @@ invenio_base.api_apps =
 invenio_base.api_blueprints =
     invenio_users = invenio_users_resources.views:create_users_resources_bp
     invenio_groups = invenio_users_resources.views:create_groups_resources_bp
+    invenio_domains = invenio_users_resources.views:create_domains_resources_bp
     invenio_users_resources = invenio_users_resources.views:blueprint
 invenio_base.blueprints =
     invenio_users_resources = invenio_users_resources.views:blueprint
 invenio_search.mappings =
     users = invenio_users_resources.records.mappings
     groups = invenio_users_resources.records.mappings
+    domains = invenio_users_resources.records.mappings
 invenio_i18n.translations =
     messages = invenio_users_resources
 invenio_access.actions =
