setup: bump major dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,26 +27,26 @@ packages = find:
 python_requires = >=3.7
 zip_safe = False
 install_requires =
-    invenio-administration>=2.0.0,<3.0.0
-    invenio-accounts>=5.0.0,<6.0.0
-    invenio-i18n>=2.0.0
-    invenio-notifications>=0.1.0,<1.0.0
-    invenio-oauthclient>=4.0.0,<5.0.0
-    invenio-records-resources>=6.0.0,<7.0.0
+    invenio-administration>=3.0.0,<4.0.0
+    invenio-accounts>=6.0.0,<7.0.0
+    invenio-i18n>=3.0.0,<4.0.0
+    invenio-notifications>=1.0.0,<2.0.0
+    invenio-oauthclient>=5.0.0,<6.0.0
+    invenio-records-resources>=7.0.0,<8.0.0
 
 [options.extras_require]
 tests =
     pytest-black-ng>=0.4.0
-    invenio-app>=1.4.0,<2.0.0
-    invenio-db[postgresql,mysql]>=1.0.14,<2.0.0
-    pytest-invenio>=2.1.0,<3.0.0
+    invenio-app>=2.0.0,<3.0.0
+    invenio-db[postgresql,mysql]>=2.0.0,<3.0.0
+    pytest-invenio>=3.0.0,<4.0.0
     sphinx>=4.5
 elasticsearch7 =
-    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
+    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
 opensearch1 =
-    invenio-search[opensearch1]>=2.1.0,<3.0.0
+    invenio-search[opensearch1]>=3.0.0,<4.0.0
 opensearch2 =
-    invenio-search[opensearch2]>=2.1.0,<3.0.0
+    invenio-search[opensearch2]>=3.0.0,<4.0.0
 
 [options.entry_points]
 invenio_base.apps =
