setup: change to reusable workflows

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@
 #
 # This file is part of Invenio.
 # Copyright (C) 2020 CERN.
-# Copyright (C) 2022 Graz University of Technology.
+# Copyright (C) 2022-2024 Graz University of Technology.
 # Copyright (C) 2024 KTH Royal Institute of Technology.
 #
 # Invenio is free software; you can redistribute it and/or modify it
@@ -14,9 +14,11 @@ on:
   push:
     branches:
       - master
+      - "feature/*"
   pull_request:
     branches:
       - master
+      - "feature/*"
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: "0 3 * * 6"
