--- a/setup.cfg
+++ b/setup.cfg
@@ -87,22 +87,22 @@ add_ignore = D401
 
 [compile_catalog]
 directory = invenio_users_resources/translations/
-use-fuzzy = True
+use_fuzzy = True
 
 [extract_messages]
 copyright_holder = CERN
 msgid_bugs_address = info@inveniosoftware.org
-mapping-file = babel.ini
-output-file = invenio_users_resources/translations/messages.pot
-add-comments = NOTE
+mapping_file = babel.ini
+output_file = invenio_users_resources/translations/messages.pot
+add_comments = NOTE
 
 [init_catalog]
-input-file = invenio_users_resources/translations/messages.pot
-output-dir = invenio_users_resources/translations/
+input_file = invenio_users_resources/translations/messages.pot
+output_dir = invenio_users_resources/translations/
 
 [update_catalog]
-input-file = invenio_users_resources/translations/messages.pot
-output-dir = invenio_users_resources/translations/
+input_file = invenio_users_resources/translations/messages.pot
+output_dir = invenio_users_resources/translations/
 
 [isort]
 profile=black
