chores: replaced importlib_xyz with importlib
* Using invenio_base.utils.entry_points for entry_points

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ install_requires =
     invenio-notifications>=1.0.0,<2.0.0
     invenio-oauthclient>=5.0.0,<6.0.0
     invenio-records-resources>=8.0.0,<9.0.0
+    invenio-base>=2.3.0,<3.0.0
 
 [options.extras_require]
 tests =
